force-app/main/default/objects/Tenant__c/Tenant__c.object-meta.xml
<CustomObject>
    <description>A Slack workspace using the app.</description>
    <label>Tenant</label>
    <nameField>
        <label>Tenant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>