force-app/main/default/objects/Tenant__c/fields/Admin_Slack_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Admin_Slack_User_Ids__c</fullName>
    <label>Admin Slack User Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>