force-app/main/default/objects/Tenant__c/fields/Branding_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Branding_Logo_URL__c</fullName>
    <label>Branding Logo URL</label>
    <type>Url</type>
</CustomField>