force-app/main/default/objects/Tenant__c/fields/Branding_Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Branding_Primary_Color__c</fullName>
    <label>Branding Primary Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>