force-app/main/default/objects/Tenant__c/fields/Data_Region__c.field-meta.xml
<CustomField>
    <fullName>Data_Region__c</fullName>
    <label>Data Region</label>
    <type>Text</type>
    <length>40</length>
    <length>40</length>
</CustomField>