force-app/main/default/objects/Tenant__c/fields/Installed_At__c.field-meta.xml
<CustomField>
    <fullName>Installed_At__c</fullName>
    <label>Installed At</label>
    <type>DateTime</type>
</CustomField>