force-app/main/default/objects/Tenant__c/fields/Installed_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Installed_By_User_Id__c</fullName>
    <label>Installed By User Id</label>
    <type>Text</type>
    <length>40</length>
    <length>40</length>
</CustomField>