force-app/main/default/objects/Tenant__c/fields/Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Seats_Purchased__c</fullName>
    <label>Seats Purchased</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>