force-app/main/default/objects/Tenant__c/fields/Slack_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Team_Id__c</fullName>
    <label>Slack Team Id</label>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <length>40</length>
    <length>40</length>
</CustomField>