force-app/main/default/objects/Tenant__c/fields/Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Id__c</fullName>
    <label>Stripe Customer Id</label>
    <type>Text</type>
    <length>80</length>
    <length>80</length>
</CustomField>