force-app/main/default/objects/Tenant__c/fields/Trial_Ends_At__c.field-meta.xml
<CustomField>
    <fullName>Trial_Ends_At__c</fullName>
    <label>Trial Ends At</label>
    <type>DateTime</type>
</CustomField>