force-app/main/default/objects/Tenant__c/fields/Workspace_Name__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Name__c</fullName>
    <label>Workspace Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>